--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-static==0.0.6
 python-decouple==3.8
 django-environ==0.11.2
 gunicorn==21.2.0
+psycopg2-binary==2.9.9
 
 djangorestframework==3.16.0 #追加
 djangorestframework-simplejwt==5.5.0 #追加
